remove benchs and add crossplatform